// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-css-modules prependData should have correct object params css 1`] = `
Array [
  "red",
  "type",
  "page-margin",
  "pageMargin",
  "prepended-class",
  "class1",
  "class2",
  "class3",
  "id",
  "id2",
  "sunrise",
]
`;

exports[`jest-css-modules prependData should have correct object params less 1`] = `
Array [
  "prepended-class",
  "class1",
  "class2",
  "class3",
  "id",
  "id2",
  "sunrise",
]
`;

exports[`jest-css-modules prependData should have correct object params scss 1`] = `
Array [
  "prepended-class",
  "class1",
  "class2",
  "class3",
  "id",
  "id2",
  "sunrise",
]
`;

exports[`jest-css-modules prependData should have correct object params stylus 1`] = `
Array [
  "prepended-class",
  "class1",
  "class2",
  "class3",
  "id",
  "id2",
  "sunrise",
]
`;
